fix(Projects): Give project title and icons space when line wraps

--- a/manager/manager/static/sass/styles.scss
+++ b/manager/manager/static/sass/styles.scss
@@ -396,6 +396,10 @@ body {
 // Reusable elements & Utility classes
 // =============================================================================
 
+.leading-loose {
+  line-height: 2
+}
+
 input[type="checkbox"].toggle {
   @extend .is-sr-only;
 
